Add a matrix utility 🔔